fix: overflow x hidden added

--- a/_settings.scss
+++ b/_settings.scss
@@ -21,6 +21,7 @@ $grey : rgb(220,220,220);
 html {
     scroll-behavior: smooth;
     width: 100vw;
+    overflow-x: hidden;
   }
 
 body {
